写完小函数
写完各种技能的小函数，未测试

--- a/game2/res.qrc
+++ b/game2/res.qrc
@@ -21,5 +21,6 @@
         <file>Image/rankroom.jpg</file>
         <file>Image/back.png</file>
         <file>Image/rebound.gif</file>
+        <file>Image/defend.gif</file>
     </qresource>
 </RCC>
