--- a/game2/fightui.ui
+++ b/game2/fightui.ui
@@ -494,13 +494,13 @@
     </item>
    </layout>
   </widget>
-  <widget class="QLabel" name="mymonSkill_1">
+  <widget class="QLabel" name="myAttcakLabel">
    <property name="geometry">
     <rect>
      <x>340</x>
      <y>250</y>
-     <width>72</width>
-     <height>41</height>
+     <width>70</width>
+     <height>40</height>
     </rect>
    </property>
    <property name="text">
@@ -632,6 +632,22 @@
     <string>提交</string>
    </property>
   </widget>
+  <widget class="QLabel" name="message">
+   <property name="geometry">
+    <rect>
+     <x>450</x>
+     <y>380</y>
+     <width>271</width>
+     <height>71</height>
+    </rect>
+   </property>
+   <property name="frameShape">
+    <enum>QFrame::Box</enum>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
   <zorder>BackGround</zorder>
   <zorder>my_monster2</zorder>
   <zorder>SummonLabel</zorder>
@@ -652,13 +668,14 @@
   <zorder>widget_7</zorder>
   <zorder>widget_8</zorder>
   <zorder>widget_9</zorder>
-  <zorder>mymonSkill_1</zorder>
+  <zorder>myAttcakLabel</zorder>
   <zorder>monSelect1</zorder>
   <zorder>me</zorder>
   <zorder>enemy</zorder>
   <zorder>widget_10</zorder>
   <zorder>widget_11</zorder>
   <zorder>pushButton</zorder>
+  <zorder>message</zorder>
  </widget>
  <customwidgets>
   <customwidget>
