--- a/game2/fightui.ui
+++ b/game2/fightui.ui
@@ -214,8 +214,8 @@
   <widget class="QWidget" name="gridLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>450</x>
-     <y>90</y>
+     <x>510</x>
+     <y>150</y>
      <width>271</width>
      <height>281</height>
     </rect>
@@ -223,6 +223,13 @@
    <layout class="QGridLayout" name="gridLayout">
     <item row="1" column="0">
      <widget class="QLabel" name="summon_monster2">
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="0">
+     <widget class="QLabel" name="summon_monster0">
       <property name="text">
        <string/>
       </property>
@@ -242,20 +249,13 @@
       </property>
      </widget>
     </item>
-    <item row="0" column="0">
-     <widget class="QLabel" name="summon_monster0">
-      <property name="text">
-       <string/>
-      </property>
-     </widget>
-    </item>
    </layout>
   </widget>
   <widget class="QLabel" name="SummonLabel">
    <property name="geometry">
     <rect>
-     <x>450</x>
-     <y>60</y>
+     <x>510</x>
+     <y>120</y>
      <width>271</width>
      <height>311</height>
     </rect>
@@ -526,14 +526,14 @@
   <widget class="QLabel" name="me">
    <property name="geometry">
     <rect>
-     <x>40</x>
+     <x>70</x>
      <y>10</y>
-     <width>300</width>
+     <width>241</width>
      <height>40</height>
     </rect>
    </property>
    <property name="frameShape">
-    <enum>QFrame::Box</enum>
+    <enum>QFrame::NoFrame</enum>
    </property>
    <property name="text">
     <string/>
@@ -542,14 +542,14 @@
   <widget class="QLabel" name="enemy">
    <property name="geometry">
     <rect>
-     <x>930</x>
+     <x>970</x>
      <y>10</y>
-     <width>300</width>
+     <width>231</width>
      <height>40</height>
     </rect>
    </property>
    <property name="frameShape">
-    <enum>QFrame::Box</enum>
+    <enum>QFrame::NoFrame</enum>
    </property>
    <property name="text">
     <string/>
@@ -635,9 +635,25 @@
   <widget class="QLabel" name="message">
    <property name="geometry">
     <rect>
-     <x>450</x>
-     <y>380</y>
-     <width>271</width>
+     <x>340</x>
+     <y>10</y>
+     <width>261</width>
+     <height>71</height>
+    </rect>
+   </property>
+   <property name="frameShape">
+    <enum>QFrame::Box</enum>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="message_2">
+   <property name="geometry">
+    <rect>
+     <x>670</x>
+     <y>10</y>
+     <width>261</width>
      <height>71</height>
     </rect>
    </property>
@@ -676,6 +692,7 @@
   <zorder>widget_11</zorder>
   <zorder>pushButton</zorder>
   <zorder>message</zorder>
+  <zorder>message_2</zorder>
  </widget>
  <customwidgets>
   <customwidget>
