--- a/game2/gamelobby.ui
+++ b/game2/gamelobby.ui
@@ -16,10 +16,10 @@
   <widget class="QLabel" name="User1">
    <property name="geometry">
     <rect>
-     <x>617</x>
-     <y>124</y>
-     <width>251</width>
-     <height>91</height>
+     <x>800</x>
+     <y>160</y>
+     <width>161</width>
+     <height>71</height>
     </rect>
    </property>
    <property name="text">
@@ -29,10 +29,10 @@
   <widget class="QLabel" name="User2">
    <property name="geometry">
     <rect>
-     <x>617</x>
-     <y>234</y>
-     <width>251</width>
-     <height>91</height>
+     <x>800</x>
+     <y>270</y>
+     <width>161</width>
+     <height>71</height>
     </rect>
    </property>
    <property name="text">
@@ -42,10 +42,10 @@
   <widget class="QLabel" name="User3">
    <property name="geometry">
     <rect>
-     <x>617</x>
-     <y>350</y>
-     <width>251</width>
-     <height>91</height>
+     <x>800</x>
+     <y>360</y>
+     <width>161</width>
+     <height>71</height>
     </rect>
    </property>
    <property name="text">
@@ -55,10 +55,10 @@
   <widget class="QLabel" name="User4">
    <property name="geometry">
     <rect>
-     <x>617</x>
-     <y>462</y>
-     <width>251</width>
-     <height>91</height>
+     <x>800</x>
+     <y>450</y>
+     <width>161</width>
+     <height>71</height>
     </rect>
    </property>
    <property name="text">
@@ -68,14 +68,14 @@
   <widget class="QPushButton" name="rankButton">
    <property name="geometry">
     <rect>
-     <x>410</x>
-     <y>500</y>
+     <x>260</x>
+     <y>430</y>
      <width>101</width>
      <height>71</height>
     </rect>
    </property>
    <property name="text">
-    <string>RankingRoom</string>
+    <string>ranking</string>
    </property>
    <property name="autoDefault">
     <bool>true</bool>
@@ -84,7 +84,7 @@
     <bool>false</bool>
    </property>
    <property name="flat">
-    <bool>true</bool>
+    <bool>false</bool>
    </property>
   </widget>
   <widget class="QLabel" name="background">
@@ -103,14 +103,14 @@
   <widget class="QLabel" name="name">
    <property name="geometry">
     <rect>
-     <x>0</x>
-     <y>0</y>
+     <x>260</x>
+     <y>230</y>
      <width>261</width>
      <height>41</height>
     </rect>
    </property>
    <property name="frameShape">
-    <enum>QFrame::Box</enum>
+    <enum>QFrame::NoFrame</enum>
    </property>
    <property name="text">
     <string/>
@@ -120,13 +120,13 @@
    <property name="geometry">
     <rect>
      <x>260</x>
-     <y>0</y>
+     <y>330</y>
      <width>141</width>
      <height>41</height>
     </rect>
    </property>
    <property name="frameShape">
-    <enum>QFrame::Box</enum>
+    <enum>QFrame::NoFrame</enum>
    </property>
    <property name="text">
     <string/>
@@ -135,8 +135,8 @@
   <widget class="QPushButton" name="waitButton">
    <property name="geometry">
     <rect>
-     <x>160</x>
-     <y>520</y>
+     <x>390</x>
+     <y>430</y>
      <width>111</width>
      <height>71</height>
     </rect>
@@ -148,10 +148,10 @@
   <widget class="QPushButton" name="updateButton">
    <property name="geometry">
     <rect>
-     <x>260</x>
-     <y>400</y>
+     <x>520</x>
+     <y>430</y>
      <width>111</width>
-     <height>81</height>
+     <height>71</height>
     </rect>
    </property>
    <property name="text">
